src/styles/styles.css
/* ... */
@media (min-width: 868px) {
  div.video-block {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
  }
  div.video-block iframe {
    width: 80%;
  }
}

footer {
  bottom: 0;
  width: 100vw;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  background-color: black;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  color: white;
  padding: 5px 10px 5px 10px;
  z-index: 100;
  font-size: 12px;
  -webkit-box-shadow: 10px 10px 10px 12px #333;
          box-shadow: 10px 10px 10px 12px #333;
}

@media (min-width: 658px) {
  footer {
    font-size: 12px;
  }
}

.contact {
  height: 100%;
}

.contact .page-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  color: whitesmoke;
  padding-top: 100px;
  height: 100%;
}

.contact .page-wrapper:before {
  margin-top: 250px;
  content: "";
  position: absolute;
  width: 100%;
  height: 600px;
  background-color: black;
  z-index: -1;
  opacity: .5;
  border-radius: 4px;
}

@media (min-width: 868px) {
  .contact .page-wrapper:before {
    height: 600px;
    width: 650px;
  }
}

.contact p {
  font-size: 25px;
}

.contact h2 {
  font-size: 25px;
  -webkit-margin-before: 0;
          margin-block-start: 0;
  -webkit-margin-after: 0;
          margin-block-end: 0;
}

.contact span {
  font-size: 20px;
}

@media (min-width: 658px) {
  .contact h2 {
    font-size: 35px;
  }
  .contact span {
    font-size: 25px;
  }
  .contact p {
    font-size: 30px;
  }
}

.learn-more p {
  max-width: 400px;
  font-size: 18px !important;
}

.learn-more .page-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  color: whitesmoke;
  padding-top: 100px;
  height: 100%;
}

.learn-more .page-wrapper:before {
  margin-top: 250px;
  content: "";
  position: absolute;
  width: 100%;
  height: 600px;
  background-color: black;
  z-index: -1;
  opacity: .5;
  border-radius: 4px;
}

@media (min-width: 868px) {
  .learn-more .page-wrapper:before {
    height: 600px;
    width: 650px;
  }
}

.learn-more p {
  font-size: 25px;
}

.learn-more h2 {
  font-size: 25px;
  -webkit-margin-before: 0;
          margin-block-start: 0;
  -webkit-margin-after: 0;
          margin-block-end: 0;
}

.learn-more span {
  font-size: 20px;
}

@media (min-width: 658px) {
  .learn-more h2 {
    font-size: 35px;
  }
  .learn-more span {
    font-size: 25px;
  }
  .learn-more p {
    font-size: 30px;
  }
}

header {
  background-color: transparent;
}

main {
  background: transparent !important;
  overflow-x: hidden;
}

.App {
  background-color: transparent;
  overflow: hidden;
}

.krIRUZ {
  z-index: 1 !important;
}

html {
  font-family: 'Open Sans', sans-serif;
  background: transparent !important;
}

body {
  background: transparent !important;
  min-height: 100vh;
}

body, html {
  height: 100%;
}

.wrapper {
  min-height: 100vh;
  font-family: 'Quicksand', sans-serif;
  line-height: 1.5;
  word-spacing: 4px;
  letter-spacing: 1px;
}

/* first section */
.bg-1 {
  background-image: url(/src/assets/images/lj-skew.jpg);
}

/* third section */
.bg-2 {
  background-image: url(/src/assets/images/outdoor-lj.jpg);
}

/* fifth section */
.bg-3 {
  background-image: url(/src/assets/images/lj-closeup.jpg);
}

.fixed-bg {
  overscroll-behavior: none;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  min-height: 100vh;
  min-width: 100vw;
  color: #FFFFEA;
  text-align: center;
  display: table;
  opacity: .9;
}

.fixed-bg div {
  height: 100vh;
  min-height: 800px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  align-items: center;
}

.fixed-bg div p {
  max-width: 450px;
}

.fixed-bg h1 {
  display: table-cell;
  vertical-align: middle;
  font-size: 35px;
}

@media (min-width: 658px) {
  .fixed-bg h1 {
    font-size: 60px;
  }
}

.scroll-bg {
  background-color: #0f0f0a;
  padding: 10px 30px;
  min-height: 55 0px;
  height: 100vh;
  font-size: 15px;
  color: whitesmoke;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  justify-content: center;
}

.scroll-bg img {
  max-width: 250px;
}

.scroll-bg p {
  max-width: 450px;
}

@media (min-width: 658px) {
  .scroll-bg p {
    padding: 0 0 0 50px;
  }
}

@media (min-width: 658px) {
  .scroll-bg div h1 {
    padding: 0 0 0 50px;
  }
}
/* ... */

